# cora

./: .gitignore  .markdownlint.json  .yamllint.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  NOTICE  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  standard_proposal.yaml  standard_update.yaml
.github/workflows/: docs-site.yaml  extractors.yaml  license-check.yaml  lint.yaml
crosswalks/: README.md  taxonomy.md
crosswalks/concepts/: accounting_standard.yaml  area_unit_of_measurement.yaml  bathroom_count.yaml  bedroom_count.yaml  building_id.yaml  city.yaml  country.yaml  (+26 more)
docs/: README.md  field-inventory.md  onboarding-a-standard.md
drift/: README.md
examples/: README.md
governance/: CLA.md  SECURITY.md
skills/: README.md
standards/: README.md
tools/: README.md
tools/extractors/: README.md  pyproject.toml
tools/extractors/configs/: field-count-minimums.yaml  mits-accounts-payable-dictionary.yaml  mits-accounts-payable.yaml  mits-collections.yaml  mits-lead-management-dictionary.yaml  mits-lead-management.yaml  mits-lease-application.yaml  mits-resident-screening-dictionary.yaml  mits-resident-screening.yaml  mits-resident-transactions-dictionary.yaml  mits-resident-transactions.yaml  redi-data-fields.yaml
tools/extractors/fixtures/: inventory-flat.yaml  inventory-with-types.yaml
tools/extractors/schema/: inventory.schema.json
tools/extractors/scripts/: show_disagreements.py
tools/extractors/src/cora_extractors/: __init__.py  __main__.py  _excel_io.py  cdm_json.py  cli.py  config.py  excel_dictionary.py  excel_multisheet.py  extractor.py  generator.py  inventory.py  json_catalog.py  path.py  summary.py  validator.py  xsd.py
tools/extractors/src/cora_extractors/concepts/: __init__.py  census.py  embeddings.py  report.py  scaffold.py  suggest.py
tools/extractors/src/cora_extractors/generators/: _common.py  adoption_briefings.py  concept_graphs.py  concept_pages.py  coverage_matrix.py  index.py  inventory_pages.py
tools/extractors/src/cora_extractors/validators/: __init__.py  crosswalk_paths.py  field_count.py  inventory_schema.py
tools/extractors/tests/: test_adoption_briefings.py  test_cdm_json.py  test_cli_integration.py  test_concepts.py  test_concepts_semantic.py  test_crosswalk_paths_validator.py  test_enrich.py  test_excel_dictionary.py  test_excel_multisheet.py  test_extractors.py  test_field_count_validator.py  test_generators.py  test_inventory.py  test_inventory_schema_validator.py  test_json_catalog.py  test_path.py  test_smoke.py  test_summary.py  test_xsd.py  test_xsd_include_remap.py
tools/extractors/tests/fixtures/cdm_json/a/: Gadget.cdm.json  Widget.cdm.json  widgets.manifest.cdm.json
tools/extractors/tests/fixtures/cdm_json/b/: Order.cdm.json  orders.manifest.cdm.json
tools/extractors/tests/fixtures/excel/a/: config.yaml  dictionary.xlsx
tools/extractors/tests/fixtures/excel/b/: config.yaml  dictionary.xlsx
tools/extractors/tests/fixtures/json/a/: catalog.json  config.yaml
tools/extractors/tests/fixtures/json/b/: catalog.json  config.yaml
tools/extractors/tests/fixtures/xsd/a/: common.xsd  main.xsd
tools/extractors/tests/fixtures/xsd/b/: single.xsd
tools/extractors/tests/fixtures/xsd/remote/: shared.xsd  uses-remote.xsd
(+84 files in other folders)
