[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cora-extractors"
version = "0.0.0"
description = "Field inventory extractors for the CORA standards corpus."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "CORA Maintainers", email = "technical@coradata.org" }]
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = [
  "lxml>=5,<6",
  "openpyxl>=3.1,<4",
  "pyyaml>=6,<7",
  "jsonschema>=4,<5",
  "pydantic>=2,<3",
  "xlrd>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<6",
  "ruff>=0.6,<1",
  "mypy>=1,<2",
]

[project.scripts]
cora-extract = "cora_extractors:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/cora_extractors"]
