[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cora-extractors"
version = "0.0.0"
description = "Field inventory extractors for the CORA standards corpus."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "CORA Maintainers", email = "technical@coradata.org" }]
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = [
  "lxml>=5,<7",
  "openpyxl>=3.1,<4",
  "pyyaml>=6,<7",
  "jsonschema>=4,<5",
  "pydantic>=2,<3",
  "xlrd>=2,<3",
  "jsonpath-ng>=1.6,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.6,<1",
  "mypy>=1,<3",
  "types-PyYAML>=6,<7",
  "types-jsonschema>=4,<5",
]
docs = [
  "mkdocs-material>=9,<10",
  "pymdown-extensions>=10,<11",
]
# Optional ML stack for `cora concepts suggest --semantic`. Adds ~250 MB
# (torch + transformers + sentence-transformers), so it lives behind an
# extra rather than the base dependency set. The default string-similarity
# pass (`cora concepts suggest`) needs none of this.
concepts-ml = [
  # sentence-transformers 5.x pulls transformers 5.x which has a NameError
  # in transformers/integrations/accelerate.py against torch 2.2; pin <5.
  "sentence-transformers>=3,<6",
  # The transitive torch+sentence-transformers combo needs numpy 1.x — torch
  # 2.2's pre-built wheels predate the numpy 2.x ABI break.
  "numpy>=1.26,<2",
]

[project.scripts]
cora = "cora_extractors.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/cora_extractors"]

# sentence-transformers + its transitive deps don't ship type stubs. The
# semantic clustering module imports it lazily inside a function and wraps
# the result in our own typed Protocol, so missing type info is contained.
[[tool.mypy.overrides]]
module = ["sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true
